# cmake-examples2

1/: CMakeLists.txt
10/: CMakeLists.txt  compile_commands.json  main.cpp
11/: CMakeLists.txt  compile_commands.json  main.cpp
12/: CMakeLists.txt  main.cpp
13/: CMakeLists.txt  compile_commands.json
13/subdir1/: CMakeLists.txt
13/subdir1/include/lib1/: hello.h
13/subdir2/: CMakeLists.txt
13/subdir2/include/lib2/: adder.h
13/subdir2/src/: adder.cpp
13/subdir3/: CMakeLists.txt  main.cpp
14/: CMakeLists.txt  main.cpp  ver.h.in
15/: AddressBook.proto  CMakeLists.txt  compile_commands.json  main.cpp
16/: CMakeLists.txt  compile_commands.json
16/lib1/: CMakeLists.txt
16/lib1/include/: lib1.h
16/lib2/: CMakeLists.txt
16/lib2/include/: adder.h
16/lib2/src/: adder.cpp
16/src/: CMakeLists.txt  main.cpp
17/: CMakeLists.txt
17/sub1/: CMakeLists.txt  main.cpp
17/sub2/: CMakeLists.txt  main.cpp
18/: CMakeLists.txt  compile_commands.json  palindrome.cpp  palindrome.test.cpp
19/: CMakeLists.txt  compile_commands.json  main.cpp
19/palindrome/: CMakeLists.txt  palindrome.h
2/: CMakeLists.txt
20/: CMakeLists.txt  compile_commands.json  hello_test.cpp
3/: CMakeLists.txt  main.cpp
4/: CMakeLists.txt  math.cpp
5/: CMakeLists.txt  compile_commands.json
6/: CMakeLists.txt  compile_commands.json
7/: CMakeLists.txt  compile_commands.json
7/src/: main.cpp  math.cpp
8/: CMakeLists.txt  compile_commands.json
8/include/greet/: hello.h
8/src/: hello.cpp  main.cpp
9/: CMakeLists.txt  main.cpp
utils/: main.cpp
